Cambios sobre el index.jsp quq subió Aaron para el boton acceder
+ cambios en FormularioNuevaCandidatura.jsp

+ añadido botón en candidaturaCorrecta.html

--- a/candidaturaCorrecta.html
+++ b/candidaturaCorrecta.html
@@ -9,7 +9,7 @@
     <body>
         <div>
             <h2> Has aplicado correctamente al puesto ofertado. Gracias! </h2>
-            <a href="http://www.google.es"> Volver al inicio </a> <!--  -->
+            <input type="button" value="Cerrar" onclick="window.close()"> <!--  -->
         </div>
     </body>
 </html>
